--- a/net/bluetooth/hidbrcm/Kconfig
+++ b/net/bluetooth/hidbrcm/Kconfig
@@ -1,6 +1,6 @@
 config BT_HID_BRCM
-	tristate "BRCM HID support"
+	bool "BRCM HID support"
 	depends on BT
 	help
-	  Say Y here to BRCM HID support into the kernel or say M to
-	  compile it as module (bthid).
+	  Say Y here to compile BRCM HID support into the kernel
+
