--- a/net/bluetooth/rfcomm/Kconfig
+++ b/net/bluetooth/rfcomm/Kconfig
@@ -1,6 +1,6 @@
 config BT_RFCOMM
 	tristate "RFCOMM protocol support"
-	depends on BT && BT_L2CAP
+	depends on BT
 	help
 	  RFCOMM provides connection oriented stream transport.  RFCOMM
 	  support is required for Dialup Networking, OBEX and other Bluetooth
@@ -10,7 +10,8 @@ config BT_RFCOMM
 	  compile it as module (rfcomm).
 
 config BT_RFCOMM_TTY
-	tristate "RFCOMM TTY support"
+	bool "RFCOMM TTY support"
+	depends on BT_RFCOMM
 	help
 	  This option enables TTY emulation support for RFCOMM channels.
 
