--- a/arch/arm/configs/blade_cm10_defconfig
+++ b/arch/arm/configs/blade_cm10_defconfig
@@ -1530,6 +1530,7 @@ CONFIG_SERIAL_8250_RUNTIME_UARTS=4
 #
 CONFIG_SERIAL_TEGRA=y
 CONFIG_SERIAL_TEGRA_BRCM=y
+CONFIG_SERIAL_TEGRA_BRCM_LPM=y
 # CONFIG_SERIAL_SC8800G is not set
 # CONFIG_SERIAL_MAX3100 is not set
 # CONFIG_SERIAL_MAX3107 is not set
