--- a/arch/arm/configs/cyanogenmod_enrc2b_defconfig
+++ b/arch/arm/configs/cyanogenmod_enrc2b_defconfig
@@ -1462,6 +1462,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_RM31080A is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_3k=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_MMA8450 is not set
@@ -1526,6 +1527,7 @@ CONFIG_SERIAL_8250_RUNTIME_UARTS=4
 CONFIG_SERIAL_TEGRA=y
 CONFIG_SERIAL_TEGRA_BRCM=y
 CONFIG_SERIAL_TEGRA_BRCM_LPM=y
+# CONFIG_SERIAL_TEGRA_BRCM_LPM is not set
 # CONFIG_SERIAL_SC8800G is not set
 # CONFIG_SERIAL_MAX3100 is not set
 # CONFIG_SERIAL_MAX3107 is not set
@@ -3449,4 +3451,3 @@ CONFIG_CPU_RMAP=y
 CONFIG_NLATTR=y
 # CONFIG_AVERAGE is not set
 # CONFIG_CORDIC is not set
-
