--- a/arch/arm/configs/cyanogenmod_enrc2b_defconfig
+++ b/arch/arm/configs/cyanogenmod_enrc2b_defconfig
@@ -2141,7 +2141,7 @@ CONFIG_VGA_ARB=y
 CONFIG_VGA_ARB_MAX_GPUS=16
 # CONFIG_DRM is not set
 # CONFIG_STUB_POULSBO is not set
-CONFIG_ION=y
+#CONFIG_ION is not set
 # CONFIG_VGASTATE is not set
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
@@ -2683,7 +2683,6 @@ CONFIG_USB_ANDROID_ECM=y
 # OTG and related infrastructure
 #
 CONFIG_USB_OTG_UTILS=y
-CONFIG_USB_OTG_WAKELOCK=y
 # CONFIG_USB_GPIO_VBUS is not set
 CONFIG_USB_ULPI=y
 CONFIG_USB_ULPI_VIEWPORT=y
