--- a/arch/arm/configs/cyanogenmod_enrc2b_defconfig
+++ b/arch/arm/configs/cyanogenmod_enrc2b_defconfig
@@ -2958,8 +2958,8 @@ CONFIG_SENSORS_LTR558=y
 #
 # Triggers - standalone
 #
-CONFIG_XVMALLOC=y
-CONFIG_ZRAM=y
+# CONFIG_XVMALLOC is not set
+# CONFIG_ZRAM is not set
 # CONFIG_FB_SM7XX is not set
 # CONFIG_VIDEO_DT3155 is not set
 # CONFIG_CRYSTALHD is not set
@@ -3448,4 +3448,3 @@ CONFIG_CPU_RMAP=y
 CONFIG_NLATTR=y
 # CONFIG_AVERAGE is not set
 # CONFIG_CORDIC is not set
-
